debathena-discuss (10.0.16-0debathena1) UNRELEASED; urgency=low

  [ Jonathan Reed ]
  * Switch from control.in to control (Trac: #561)
  * Bump Standards-Version to 3.9.3
  * Bump compat level to 7

  [ Victor Vasiliev ]
  * Fix segmentation fault caused by interrupting listing of the transactions
    in the meeting.

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:59:39 -0400

debathena-discuss (10.0.15-0debathena2) unstable; urgency=low

  * Bump debian/compat to 6
  * Package discuss server utilities (Trac: #881)
  * Cleanup man pages so they don't generate errors
  * Add missing man pages to satisfy Lintian
  * Comply with Lintian's feelings on grammar
  * Fix buffer overflow when re-adding meeting (Trac: #973)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 13 Sep 2012 17:02:56 -0400

debathena-discuss (10.0.15-0debathena1) unstable; urgency=low

  * Fix FTBFS with -Werror=format-security.

 -- Geoffrey Thomas <geofft@mit.edu>  Sat, 28 Apr 2012 20:36:38 -0700

debathena-discuss (10.0.14-0debathena1) unstable; urgency=low

  * edsc now defines and sets its own com_err hook to avoid libdsk
    confusing emacs (Trac: 603)

 -- Jonathan Reed <jdreed@mit.edu>  Sun, 25 Sep 2011 17:07:38 -0400

debathena-discuss (10.0.13-0debathena2) unstable; urgency=low

  * Flesh out mkds.8 and rmds.8 some more.

 -- Benjamin Kaduk <kaduk@mit.edu>  Sun, 03 Jul 2011 18:31:43 -0400

debathena-discuss (10.0.13-0debathena1) unstable; urgency=low

  * Update our autogoo for the 21st century.
  * Add a working distclean target.
  * Update packaging to not require daconfiscate.
  * Eliminate libds, as its only use could be replaced by libdsk.
  * Check $PAGER for a pager before falling back on a compiled-in default
    ("more" by default, but "pager" under our packaging). (Trac: #629)

 -- Evan Broder <broder@mit.edu>  Sun, 27 Jun 2010 13:02:34 -0400

debathena-discuss (10.0.12-0debathena3) unstable; urgency=low

  * Don't depend on tcsh anymore
