@@ -1,34 +1,0 @@
-.\"
-.\"
-.\"
-.\"
-.\"
-.\"
-.TH PMTG 1 "16 October 2009" "MIT SIPB"
-.SH NAME
-pmtg \- Print the contents of a discuss meeting
-.SH SYNOPSIS
-.B pmtg
-.I meeting_name
-.SH DESCRIPTION
-.I pmtg
-prints the contents of the specified discuss meeting.
-
-.I pmtg 
-accepts no arguments.
-
-.SH FILES
-~/.meetings	Data file listing meetings that you attend.
-
-.SH AUTHORS
-Ken Raeburn, MIT Student Information Processing Board
-
-.SH "SEE ALSO"
-.PP
-discuss(1)
-
-
-
-
-
-
